post release clean up (#2317)
Co-authored-by: henrye <henry@notanemail>

--- a/ts/packages/spl-token/package.json
+++ b/ts/packages/spl-token/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@coral-xyz/spl-token",
+  "name": "@project-serum/spl-token",
   "description": "Anchor client for Solana Program Library Token",
   "version": "0.26.0",
   "author": "acheron <acheroncrypto@gmail.com>",
