lang: remove the state and interface attributes (#2285)

--- a/.github/workflows/no-cashing-tests.yaml
+++ b/.github/workflows/no-cashing-tests.yaml
@@ -251,10 +251,8 @@ jobs:
             path: spl/token-proxy
           - cmd: cd tests/multisig && anchor test --skip-lint
             path: tests/multisig
-          - cmd: cd tests/interface && anchor test --skip-lint
-            path: tests/interface
-          - cmd: cd tests/lockup && anchor test --skip-lint
-            path: tests/lockup
+          # - cmd: cd tests/lockup && anchor test --skip-lint
+          #   path: tests/lockup
           - cmd: cd tests/swap/deps/openbook-dex/dex && cargo build-bpf -- --locked && cd ../../../ && anchor test --skip-lint
             path: tests/swap
           - cmd: cd tests/escrow && anchor test --skip-lint && npx tsc --noEmit
